--- a/ecocoleta-api/src/main/resources/application.properties
+++ b/ecocoleta-api/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=ecoColeta-api
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/ecoville
-spring.datasource.username=postgres
-spring.datasource.password=Carlosh13.
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 
 
 
