feat: add CORS configuration and geographic coordinates support for user registration

--- a/ecocoleta-api/src/main/resources/application.properties
+++ b/ecocoleta-api/src/main/resources/application.properties
@@ -1,12 +1,15 @@
 spring.application.name=ecoColeta-api
 
+# Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecocoleta
+spring.datasource.username=postgres
+spring.datasource.password=Dd321456
 
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-
-
-
+# JPA Configuration
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Server Configuration (opcional)
+server.port=8080
