--- a/ecocoleta-api/src/main/resources/application.properties
+++ b/ecocoleta-api/src/main/resources/application.properties
@@ -1,15 +1,20 @@
 spring.application.name=ecoColeta-api
 
 # Database Configuration
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/ecocoleta}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:Dd321456}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/ecocoleta
-spring.datasource.username=postgres
-spring.datasource.password=Dd321456
 
-# JPA Configuration
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
+# JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
-# Server Configuration (opcional)
-server.port=8080
+# Server Configuration
+server.port=${PORT:8080}
+
+# Logging
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
